Structure The Content On the Page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,175 @@
 
 </head>
 <body>
-    
+    <header id="header">
+        <ul class="first-container">
+            <li class="search">search</li>
+            <li class="bar">bar</li>
+            <li class="notification-icon">notification icon</li>
+            <li class="logo">logo</li>
+            <li class="name">name</li>
+        </ul>
+
+        <ul class="second-container">
+            <li class="logo">logo</li>
+            <li class="admin-greeting">
+                <p>Hi there,</p>
+                <h3>Morgan Oakley(@morgan)</h3>
+            </li>
+            <li class="btn"><a href="#">New</a></li>
+            <li class="btn"><a href="#">Upload</a></li>
+            <li class="btn"><a href="#">Share</a></li>
+        </ul>
+    </header>
+
+    <section class="sidebar">
+        <div class="logo">
+            <h2><span>icon</span>Dashboard</h2>
+        </div>
+
+        <ul class="navigation-links">
+            <li><span>icon</span><a href="#">Home</a></li>
+            <li><span>icon</span><a href="#">Profile</a></li>
+            <li><span>icon</span><a href="#">Messages</a></li>
+            <li><span>icon</span><a href="#">History</a></li>
+            <li><span>icon</span><a href="#">Tasks</a></li>
+            <li><span>icon</span><a href="#">Communities</a></li>
+        </ul>
+
+        <ul class="support-links">
+            <li><span>icon</span><a href="#">Settings</a></li>
+            <li><span>icon</span><a href="#">Support</a></li>
+            <li><span>icon</span><a href="#">Privacy</a></li>
+        </ul>
+    </section>
+
+    <main id="container">
+        <section class="headers">
+            <h3>Your Projects</h3>
+            <h3>Announcements</h3>
+        </section>
+
+        <section class="cards">
+            <article class="card">
+                <div class="content">
+                    <h4>Super Cool Project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis iusto cumque consectetur qui fuga ipsum, aperiam autem recusandae ab architecto.</p>
+                </div>
+                <ul class="card-links">
+                    <li><a href="#">ico</a></li>
+                    <li><a href="#">ico</a></li>
+                    <li><a href="#">ico</a></li>
+                </ul>
+            </article>
+
+            <article class="card">
+                <div class="content">
+                    <h4>Super Cool Project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis iusto cumque consectetur qui fuga ipsum, aperiam autem recusandae ab architecto.</p>
+                </div>
+                <ul class="card-links">
+                    <li><a href="#">ico</a></li>
+                    <li><a href="#">ico</a></li>
+                    <li><a href="#">ico</a></li>
+                </ul>
+            </article>
+
+            <article class="card">
+                <div class="content">
+                    <h4>Super Cool Project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis iusto cumque consectetur qui fuga ipsum, aperiam autem recusandae ab architecto.</p>
+                </div>
+                <ul class="card-links">
+                    <li><a href="#">ico</a></li>
+                    <li><a href="#">ico</a></li>
+                    <li><a href="#">ico</a></li>
+                </ul>
+            </article>
+
+            <article class="card">
+                <div class="content">
+                    <h4>Super Cool Project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis iusto cumque consectetur qui fuga ipsum, aperiam autem recusandae ab architecto.</p>
+                </div>
+                <ul class="card-links">
+                    <li><a href="#">ico</a></li>
+                    <li><a href="#">ico</a></li>
+                    <li><a href="#">ico</a></li>
+                </ul>
+            </article>
+
+            <article class="card">
+                <div class="content">
+                    <h4>Super Cool Project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis iusto cumque consectetur qui fuga ipsum, aperiam autem recusandae ab architecto.</p>
+                </div>
+                <ul class="card-links">
+                    <li><a href="#">ico</a></li>
+                    <li><a href="#">ico</a></li>
+                    <li><a href="#">ico</a></li>
+                </ul>
+            </article>
+
+            <article class="card">
+                <div class="content">
+                    <h4>Super Cool Project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis iusto cumque consectetur qui fuga ipsum, aperiam autem recusandae ab architecto.</p>
+                </div>
+                <ul class="card-links">
+                    <li><a href="#">ico</a></li>
+                    <li><a href="#">ico</a></li>
+                    <li><a href="#">ico</a></li>
+                </ul>
+            </article>
+        </section>
+
+        <section class="sidebar-1">
+            <div>
+                <h4>Site Maintenance</h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum eos aliquid quisquam alias asperiores omnis commodi voluptates reprehenderit similique consequatur.</p>
+            </div>
+            <div>
+                <h4>Community Share Day</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem quisquam cupiditate unde porro illum est necessitatibus beatae nemo tempora eius.</p>
+            </div>
+            <div>
+                <h4>Updated Privacy Policy</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate est, ratione animi tempora ipsa eius. Nemo enim corporis corrupti esse.</p>
+            </div>
+        </section>
+
+        <div class="section-2">
+            <h2>Trending</h2>
+
+            <div>
+                <img src="" alt=""><span>img</span>
+                <div>
+                    <h6>@tegan</h6>
+                    <p>World Peace Builder</p>
+                </div>
+            </div>
+            <div>
+                <img src="" alt=""><span>img</span>
+                <div>
+                    <h6>@morgan</h6>
+                    <p>Super Cool Project</p>
+                </div>
+            </div>
+            <div>
+                <img src="" alt=""><span>img</span>
+                <div>
+                    <h6>@kendall</h6>
+                    <p>Life Changing App</p>
+                </div>
+            </div>
+            <div>
+                <img src="" alt=""><span>img</span>
+                <div>
+                    <h6>@alex</h6>
+                    <p>No Traffic Maker</p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
