Add Icons And Logos

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <header id="header">
         <ul class="first-container">
-            <li class="search">search</li>
+            <li class="search"><img src="icons/magnify.svg" alt="magnify"></li>
             <li class="bar">bar</li>
-            <li class="notification-icon">notification icon</li>
-            <li class="logo">logo</li>
-            <li class="name">name</li>
+            <li class="notification-icon"><img src="icons/bell-ring-outline.svg" alt="bell-ring-outline"></li>
+            <li class="logo"><img src="icons/dog-pic-2.png" alt="dog-pic-2"></li>
+            <li class="name">Morgan Oakley</li>
         </ul>
 
         <ul class="second-container">
-            <li class="logo">logo</li>
+            <li class="logo"><img src="icons/dog-pic-2.png" alt="dog-pic-2"></li>
             <li class="admin-greeting">
                 <p>Hi there,</p>
                 <h3>Morgan Oakley(@morgan)</h3>
@@ -31,22 +31,22 @@
 
     <section class="sidebar">
         <div class="logo">
-            <h2><span>icon</span>Dashboard</h2>
+            <h2><img src="icons/view-dashboard.svg" alt="view-dashboard">Dashboard</h2>
         </div>
 
         <ul class="navigation-links">
-            <li><span>icon</span><a href="#">Home</a></li>
-            <li><span>icon</span><a href="#">Profile</a></li>
-            <li><span>icon</span><a href="#">Messages</a></li>
-            <li><span>icon</span><a href="#">History</a></li>
-            <li><span>icon</span><a href="#">Tasks</a></li>
-            <li><span>icon</span><a href="#">Communities</a></li>
+            <li><img src="icons/home.svg" alt="home"><a href="#">Home</a></li>
+            <li><img src="icons/card-account-details-outline.svg" alt="card-account-details-outline"><a href="#">Profile</a></li>
+            <li><img src="icons/message-reply-outline.svg" alt="message-reply-outline"><a href="#">Messages</a></li>
+            <li><img src="icons/clock-time-three.svg" alt="clock-time-three"><a href="#">History</a></li>
+            <li><img src="icons/note-multiple.svg" alt="note-multiple"><a href="#">Tasks</a></li>
+            <li><img src="icons/account-group.svg" alt="account-group"><a href="#">Communities</a></li>
         </ul>
 
         <ul class="support-links">
-            <li><span>icon</span><a href="#">Settings</a></li>
-            <li><span>icon</span><a href="#">Support</a></li>
-            <li><span>icon</span><a href="#">Privacy</a></li>
+            <li><img src="icons/cog.svg" alt="cog"><a href="#">Settings</a></li>
+            <li><img src="icons/help-box.svg" alt="help-box"><a href="#">Support</a></li>
+            <li><img src="icons/shield-check.svg" alt="shield-check"><a href="#">Privacy</a></li>
         </ul>
     </section>
 
@@ -63,9 +63,9 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis iusto cumque consectetur qui fuga ipsum, aperiam autem recusandae ab architecto.</p>
                 </div>
                 <ul class="card-links">
-                    <li><a href="#">ico</a></li>
-                    <li><a href="#">ico</a></li>
-                    <li><a href="#">ico</a></li>
+                    <li><img src="icons/star-plus-outline.svg" alt="star-plus-outline"></li>
+                    <li><img src="icons/eye-plus-outline.svg" alt="eye-plus-outline"></li>
+                    <li><img src="icons/share-variant-outline.svg" alt="share-variant-outline"></li>
                 </ul>
             </article>
 
@@ -75,9 +75,9 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis iusto cumque consectetur qui fuga ipsum, aperiam autem recusandae ab architecto.</p>
                 </div>
                 <ul class="card-links">
-                    <li><a href="#">ico</a></li>
-                    <li><a href="#">ico</a></li>
-                    <li><a href="#">ico</a></li>
+                    <li><img src="icons/star-plus-outline.svg" alt="star-plus-outline"></li>
+                    <li><img src="icons/eye-plus-outline.svg" alt="eye-plus-outline"></li>
+                    <li><img src="icons/share-variant-outline.svg" alt="share-variant-outline"></li>
                 </ul>
             </article>
 
@@ -87,9 +87,9 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis iusto cumque consectetur qui fuga ipsum, aperiam autem recusandae ab architecto.</p>
                 </div>
                 <ul class="card-links">
-                    <li><a href="#">ico</a></li>
-                    <li><a href="#">ico</a></li>
-                    <li><a href="#">ico</a></li>
+                    <li><img src="icons/star-plus-outline.svg" alt="star-plus-outline"></li>
+                    <li><img src="icons/eye-plus-outline.svg" alt="eye-plus-outline"></li>
+                    <li><img src="icons/share-variant-outline.svg" alt="share-variant-outline"></li>
                 </ul>
             </article>
 
@@ -99,9 +99,9 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis iusto cumque consectetur qui fuga ipsum, aperiam autem recusandae ab architecto.</p>
                 </div>
                 <ul class="card-links">
-                    <li><a href="#">ico</a></li>
-                    <li><a href="#">ico</a></li>
-                    <li><a href="#">ico</a></li>
+                    <li><img src="icons/star-plus-outline.svg" alt="star-plus-outline"></li>
+                    <li><img src="icons/eye-plus-outline.svg" alt="eye-plus-outline"></li>
+                    <li><img src="icons/share-variant-outline.svg" alt="share-variant-outline"></li>
                 </ul>
             </article>
 
@@ -111,9 +111,9 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis iusto cumque consectetur qui fuga ipsum, aperiam autem recusandae ab architecto.</p>
                 </div>
                 <ul class="card-links">
-                    <li><a href="#">ico</a></li>
-                    <li><a href="#">ico</a></li>
-                    <li><a href="#">ico</a></li>
+                    <li><img src="icons/star-plus-outline.svg" alt="star-plus-outline"></li>
+                    <li><img src="icons/eye-plus-outline.svg" alt="eye-plus-outline"></li>
+                    <li><img src="icons/share-variant-outline.svg" alt="share-variant-outline"></li>
                 </ul>
             </article>
 
@@ -123,9 +123,9 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis iusto cumque consectetur qui fuga ipsum, aperiam autem recusandae ab architecto.</p>
                 </div>
                 <ul class="card-links">
-                    <li><a href="#">ico</a></li>
-                    <li><a href="#">ico</a></li>
-                    <li><a href="#">ico</a></li>
+                    <li><img src="icons/star-plus-outline.svg" alt="star-plus-outline"></li>
+                    <li><img src="icons/eye-plus-outline.svg" alt="eye-plus-outline"></li>
+                    <li><img src="icons/share-variant-outline.svg" alt="share-variant-outline"></li>
                 </ul>
             </article>
         </section>
@@ -149,28 +149,28 @@
             <h2>Trending</h2>
 
             <div>
-                <img src="" alt=""><span>img</span>
+                <img src="icons/png-transparent-dog-sunglasses-cartoon-cartoon-dog-wearing-sunglasses-cartoon-character-carnivoran-dog-like-mammal.png" alt="png-transparent-dog-sunglasses-cartoon-cartoon-dog-wearing-sunglasses-cartoon-character-carnivoran-dog-like-mammal">
                 <div>
                     <h6>@tegan</h6>
                     <p>World Peace Builder</p>
                 </div>
             </div>
             <div>
-                <img src="" alt=""><span>img</span>
+                <img src="icons/dog-pic-2.png" alt="dog-pic-2">
                 <div>
                     <h6>@morgan</h6>
                     <p>Super Cool Project</p>
                 </div>
             </div>
             <div>
-                <img src="" alt=""><span>img</span>
+                <img src="icons/dog-side.svg" alt="dog-side">
                 <div>
                     <h6>@kendall</h6>
                     <p>Life Changing App</p>
                 </div>
             </div>
             <div>
-                <img src="" alt=""><span>img</span>
+                <img src="icons/dog-pic-3.png" alt="dog-pic-3"><span>img</span>
                 <div>
                     <h6>@alex</h6>
                     <p>No Traffic Maker</p>
