--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </div>
             </div>
             <div>
-                <img src="icons/dog-pic-3.png" alt="dog-pic-3"><span>img</span>
+                <img src="icons/dog-pic-3.png" alt="dog-pic-3">
                 <div>
                     <h6>@alex</h6>
                     <p>No Traffic Maker</p>
